lib/tests/fixtures/compiler/parser/return_in_relationship.baseline
Error: return_in_relationship.pp:2:28: return statement cannot be used inside a relationship expression.
  File[foo] -> if true { return }
                         ^~~~~~
