lib/tests/fixtures/compiler/parser/return_in_relationship.pp
function foo() {
    File[foo] -> if true { return }
}
